# todopro-cli

./: .gitignore  CHANGELOG.md  COMMANDS_QUICKREF.md  EXAMPLES.md  FEATURES.md  IMPLEMENTATION.md  INDEX_REFACTORING_DOCS.md  LICENSE  Makefile  NEW_FEATURES.md  QUICK_ADD_PLAN.md  README.md  TEST_COVERAGE_SUMMARY.md  TEST_SUMMARY.md  UI_IMPLEMENTATION_STATUS.md  VERIFICATION.md  coverage.json  mise.toml  pyproject.toml  tasks.json  test_load.py  test_output.txt
.github/workflows/: ci.yml  publish.yml
docs/: AI_AGENT_INTEGRATION.md  AUTO_UPDATE_CHECKER.md  BACKGROUND_TASK_CACHE.md  CONTEXT_SWITCHING.md  DYNAMIC_BACKEND_CONFIGURATION.md  DYNAMIC_TASK_ID_SUFFIXES.md  FAQ.md  GETTING_STARTED.md  INSTALLATION.md  PACKAGE_IDEA.md  QUICK_ADD.md  RECENT_UPDATES.md  RELEASE.md  SPEC_32_PRE_LAUNCH_CHECKLIST.md  TOKEN_AUTO_REFRESH_FIX.md  TROUBLESHOOTING.md
man/man1/: todopro-achievements-check.1  todopro-achievements-list-achievements.1  todopro-achievements-list.1  todopro-achievements-stats.1  todopro-achievements.1  todopro-add.1  todopro-analytics-export.1  todopro-analytics-stats.1  todopro-analytics-streaks.1  todopro-analytics.1  todopro-auth-login.1  todopro-auth-logout.1  todopro-auth-signup.1  todopro-auth.1  todopro-calendar-configure.1  todopro-calendar-connect.1  todopro-calendar-describe.1  todopro-calendar-disconnect.1  todopro-calendar-list.1  todopro-calendar-pull.1  todopro-calendar-push.1  todopro-calendar-set.1  todopro-calendar-status.1  todopro-calendar-sync.1  todopro-calendar.1  todopro-complete.1  todopro-config-current-context.1  todopro-config-delete-context.1  todopro-config-get-contexts.1  todopro-config-get.1  todopro-config-reset.1  todopro-config-set-context.1  todopro-config-set.1  todopro-config-use-context.1  todopro-config-view.1  todopro-config.1  todopro-context-create.1  todopro-context-delete.1  todopro-context-list.1  todopro-context-rename.1  (+117 more)
scripts/: generate_man.py
src/todopro_cli/: __init__.py  config.py  main.py
tests/: README.md  conftest.py  test_config.py  test_core_factory.py  test_formatters.py  test_formatters_complete.py  test_formatters_extended.py  test_main.py  test_models.py  test_services.py  test_strategy_pattern.py  test_suffix_mapping.py  test_sync_conflicts.py  test_sync_state.py  test_task_cache.py  test_task_helpers.py  test_textual_prompt.py  test_unique_suffixes.py  test_update_checker.py  test_uuid_utils.py
tests/adapters/: test_connection.py  test_context_repository.py  test_e2ee.py  test_label_repository.py  test_migration_m002.py  test_migration_v2.py  test_migrations.py  test_project_repository.py  test_rest_api.py  test_schema.py  test_sqlite_adapter.py  test_storage_strategy.py  test_task_repository.py  test_user_manager.py  test_utils.py
tests/api/: test_api_analytics.py  test_api_auth.py  test_api_client.py  test_api_collaboration.py  test_api_filters.py  test_api_labels.py  test_api_projects.py  test_api_tasks.py
tests/commands/: test_achievements_command.py  test_add_command.py  test_analytics_command.py  test_archive_command.py  test_auth_app.py  test_auth_command.py  test_calendar_command.py  test_check_command.py  test_collaborate_command.py  test_comment_command.py  test_complete_command.py  test_config_command.py  test_constants.py  test_context_command.py  test_contexts_command.py  test_create_command.py  test_data_command.py  test_decorators.py  test_delete_command.py  test_describe_command.py  test_dictate_command.py  test_edit_command.py  test_encryption_command.py  test_export_command.py  test_filter_command.py  test_focus_command.py  test_focus_modules.py  test_get_command.py  test_github_command.py  test_goals_command.py  test_import_command.py  test_labels_command.py  test_link_command.py  test_list_command.py  test_login_command.py  test_logout_command.py  test_next_command.py  test_projects_command.py  test_pull_command.py  test_purge_command.py  (+34 more)
tests/fixtures/: v1_config.json  v1_credentials.json
tests/integration/: test_e2ee_sync.py
tests/models/: test_crypto.py  test_focus_achievements.py  test_focus_analytics.py  test_focus_cycling.py  test_focus_goals.py  test_focus_history.py  test_focus_keyboard.py  test_focus_state.py  test_focus_suggestions.py  test_focus_templates.py  test_focus_ui.py  test_integrations.py  test_storage_strategy.py
tests/repositories/: test_repository.py
tests/services/: test_achievement_service.py  test_api_client.py  test_audio_recorder.py  test_auth_service.py  test_config_service.py  test_encryption_edge_cases.py  test_encryption_service.py  test_goal_service.py  test_label_service.py  test_local_stt.py  test_log_service.py  test_project_service.py  test_section_service.py  test_sync_service.py  test_task_service.py  test_templates.py  test_todoist_client.py  test_todoist_importer.py
(+217 files in other folders)
