[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todopro-cli"
version = "1.0.2"
description = "A professional CLI for TodoPro task management system"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "minhdqdev", email = "minhdq.dev@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "platformdirs>=4.2.0",
    "pydantic[email]>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "typer>=0.21.1",
    "requests>=2.32.5",
    "packaging>=26.0",
    "cryptography>=42.0.0",
    "mnemonic>=0.20",
    "textual[syntax]>=0.87.0",
    "tzlocal>=5.3.1",
    "dateparser>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://todopro-cli.minhdq.dev"
Repository = "https://github.com/minhdqdev-org/todopro-cli"

[project.scripts]
todopro = "todopro_cli.main:main"
tp = "todopro_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/todopro_cli"]

[tool.setuptools.data-files]
"share/man/man1" = ["man/man1/todopro.1"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "DJ",  # flake8-django
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "T20", # flake8-print
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501", # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["todopro_cli"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pyright/Pylance configuration
[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/.*",
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "venv",
    "build",
    "dist",
]
pythonVersion = "3.12"
pythonPlatform = "Linux"
extraPaths = ["src"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false

executionEnvironments = [{ root = "src" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# addopts = "-v --cov=src/todopro_cli --cov-report=term-missing"
addopts = "-v"

[dependency-groups]
dev = [
    "click-man>=0.5.1",
    "mypy>=1.19.1",
    "pydeps>=3.0.2",
    "pylint-pydantic>=0.4.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
    "textual-dev>=1.8.0",
]
